<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#E64358"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/nunito"
            android:text="@string/heading"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/nunito"
            android:text="@string/mad"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/roman_title"
            android:textColor="#99FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:hint="@string/roman_hint"
            android:inputType="textCapCharacters"
            android:textColor="#FFFFFF"
            android:textColorHint="#FDFDFD"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/change_value"
            android:textColor="#99FFFFFF"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/decimal_title"
            android:textColor="#E64358"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:hint="@string/decimal_hint"
            android:inputType="number"
            android:textColor="#FFE64358"
            android:textColorHint="#FFE64358"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/change_value"
            android:textColor="#FFE64358"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>